--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework 1 </title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
