--- a/portfolio.html
+++ b/portfolio.html
@@ -42,9 +42,16 @@
          </div>  
 
          <div class="work">
-            <img src="https://placehold.it/180x120" class="auth-image" alt="RPG Game">
-            <h3>RPG Game</h3>
-        </div>  
+            <a href="https://github.com/pmactavish13/week-4-game">
+            <img src="assets/images/crystals-4.jpeg" class="auth-image" alt="Crystals Game">
+            <h3>Crystals Game</h3>
+            </a>
+        </div> 
+        
+        <div class="work">
+            <img src="https://placehold.it/180x120" class="auth-image" alt="Trivia Game">
+            <h3>Trivia Game</h3>
+        </div>
    
         <div class="work">
             <img src="https://placehold.it/180x120" class="auth-image" alt="Trivia Game">
