--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework 1 </title>
+    <title>Basic Portfolio - Responsive</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -56,7 +56,7 @@
 <!-- icons -->
                 
             <a href="https://github.com" target="_blank">
-                <img class="social" src="assets/images/github_square_black-128" alt="GitHub"></a>
+                <img class="social" src="assets/images/github_square_black-128.png" alt="GitHub"></a>
                         
             <a href="https://linkedin.com" target="_blank">
                 <img class="social" src="assets/images/linkedin_square_color-128.png" alt="LinkedIn"></a>
