--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
 
 <!-- main content body-->
         <div class="work">
-            <a href="https://github.com/pmactavish13/Hangman-Game">
+            <a href="https://pmactavish13.github.io/week-4-game/">
             <img src="assets/images/spiderweb.jpg" class="auth-image" alt="Hangman">
             <h3>Hangman</h3>
             </a>
