add Trivia Game

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,14 +44,15 @@
         </div>  
 
         <div class="work">
-            <a href="https://github.com/pmactavish13/week-4-game">
+            <a href="https://pmactavish13.github.io/week-4-game">
             <img src="assets/images/crystals-4.jpeg" class="auth-image" alt="Crystals Game">
             <h3>Crystals Game</h3>
             </a>
         </div> 
         
         <div class="work">
-            <img src="https://placehold.it/180x120" class="auth-image" alt="Trivia Game">
+                <a href="https://pmactavish13.github.io/TriviaGame/">
+            <img src="assets/images/triviaBackground.jpg" class="auth-image" alt="Trivia Game">
             <h3>Trivia Game</h3>
         </div>
    
