--- a/portfolio.html
+++ b/portfolio.html
@@ -54,11 +54,14 @@
                 <a href="https://pmactavish13.github.io/TriviaGame/">
             <img src="assets/images/triviaBackground.jpg" class="auth-image" alt="Trivia Game">
             <h3>Trivia Game</h3>
+            </a>
         </div>
    
         <div class="work">
-            <img src="https://placehold.it/180x120" class="auth-image" alt="Trivia Game">
-            <h3>Trivia Game</h3>
+            <a href="https://pmactavish13.github.io/Giphy-API/">
+            <img src="assets/images/yellow2.jpeg" class="auth-image" alt="Giphy Fun">
+            <h3>Giphy Fun</h3>
+            </a>
         </div>  
         
         <div class="work">
