--- a/portfolio.html
+++ b/portfolio.html
@@ -74,20 +74,26 @@
 
             <div class="work">
                 <a href="https://pmactavish13.github.io/bigLsCrew-Travel/">
-                <img src="assets/images/practicalTravel.jpg" class="auth-image" alt="Practical Travel">
-                <h3>Practical Travel</h3>
+                    <img src="assets/images/practicalTravel.jpg" class="auth-image" alt="Practical Travel">
+                    <h3>Practical Travel</h3>
                 </a>
             </div>
 
             <div class="work">
                 <a href="https://github.com/pmactavish13/liri-node-app">
-                <!-- https://pmactavish13.github.io/liri-node-app/ -->
-                <img src="assets/images/liriNode.jpg" class="auth-image" alt="liri-node-app">
-                <h3>liri app</h3>
+                    <!-- https://pmactavish13.github.io/liri-node-app/ -->
+                    <img src="assets/images/liriNode.jpg" class="auth-image" alt="liri-node-app">
+                    <h3>LIRI-Node</h3>
                 </a>
             </div>
 
-
+            <div class="work">
+                <a href="https://github.com/pmactavish13/word-guess-node">
+                    <!-- https://pmactavish13.github.io/liri-node-app/ -->
+                    <img src="assets/images/wordGuessNode.jpg" class="auth-image" alt="word-guess-node">
+                    <h3>Word Guess-Node</h3>
+                </a>
+            </div>
 
         </section>
 
