--- a/portfolio.html
+++ b/portfolio.html
@@ -89,9 +89,23 @@
 
             <div class="work">
                 <a href="https://github.com/pmactavish13/word-guess-node">
-                    <!-- https://pmactavish13.github.io/liri-node-app/ -->
+                    <!-- https://pmactavish13.github.io/word-guess-node/ -->
                     <img src="assets/images/wordGuessNode.jpg" class="auth-image" alt="word-guess-node">
                     <h3>Word Guess-Node</h3>
+                </a>
+            </div>
+
+            <div class="work">
+                <a href="https://github.com/pmactavish13/bamazon">
+                    <img src="assets/images/bamazon.jpg" class="auth-image" alt="bamazon">
+                    <h3>BAMAZON</h3>
+                </a>
+            </div>
+
+            <div class="work">
+                <a href="https://pmactavish13.github.io/Friend-Finder">
+                    <img src="assets/images/Friend-Finder.jpg" class="auth-image" alt="Friend-Finder">
+                    <h3>Friend Finder</h3>
                 </a>
             </div>
 
