--- a/portfolio.html
+++ b/portfolio.html
@@ -38,52 +38,16 @@
 
             <!-- main content body-->
             <div class="work">
-                <a href="https://pmactavish13.github.io/week-4-game/">
-                    <img src="assets/images/spiderweb.jpg" class="auth-image" alt="Hangman">
-                    <h3>Hangman</h3>
+                <a href="https://secure-fortress-56113.herokuapp.com/">
+                    <img src="assets/images/Friend-Finder.jpg" class="auth-image" alt="Friend-Finder">
+                    <h3>Friend Finder</h3>
                 </a>
             </div>
 
             <div class="work">
-                <a href="https://pmactavish13.github.io/week-4-game">
-                    <img src="assets/images/crystals-4.jpeg" class="auth-image" alt="Crystals Game">
-                    <h3>Crystals Game</h3>
-                </a>
-            </div>
-
-            <div class="work">
-                <a href="https://pmactavish13.github.io/TriviaGame/">
-                    <img src="assets/images/triviaBackground.jpg" class="auth-image" alt="Trivia Game">
-                    <h3>Trivia Game</h3>
-                </a>
-            </div>
-
-            <div class="work">
-                <a href="https://pmactavish13.github.io/Giphy-API/">
-                    <img src="assets/images/giphyFun.jpeg" class="auth-image" alt="Giphy Fun">
-                    <h3>Giphy Fun</h3>
-                </a>
-            </div>
-
-            <div class="work">
-                <a href="https://pmactavish13.github.io/Train-Scheduler/">
-                    <img src="assets/images/train.jpg" class="auth-image" alt="Train Scheduler">
-                    <h3>Train Scheduler</h3>
-                </a>
-            </div>
-
-            <div class="work">
-                <a href="https://pmactavish13.github.io/bigLsCrew-Travel/">
-                    <img src="assets/images/practicalTravel.jpg" class="auth-image" alt="Practical Travel">
-                    <h3>Practical Travel</h3>
-                </a>
-            </div>
-
-            <div class="work">
-                <a href="https://github.com/pmactavish13/liri-node-app">
-                    <!-- https://pmactavish13.github.io/liri-node-app/ -->
-                    <img src="assets/images/liriNode.jpg" class="auth-image" alt="liri-node-app">
-                    <h3>LIRI-Node</h3>
+                <a href="https://github.com/pmactavish13/bamazon">
+                    <img src="assets/images/bamazon.jpg" class="auth-image" alt="bamazon">
+                    <h3>BAMAZON</h3>
                 </a>
             </div>
 
@@ -96,16 +60,52 @@
             </div>
 
             <div class="work">
-                <a href="https://github.com/pmactavish13/bamazon">
-                    <img src="assets/images/bamazon.jpg" class="auth-image" alt="bamazon">
-                    <h3>BAMAZON</h3>
+                <a href="https://github.com/pmactavish13/liri-node-app">
+                    <!-- https://pmactavish13.github.io/liri-node-app/ -->
+                    <img src="assets/images/liriNode.jpg" class="auth-image" alt="liri-node-app">
+                    <h3>LIRI-Node</h3>
                 </a>
             </div>
 
             <div class="work">
-                <a href="https://pmactavish13.github.io/Friend-Finder">
-                    <img src="assets/images/Friend-Finder.jpg" class="auth-image" alt="Friend-Finder">
-                    <h3>Friend Finder</h3>
+                <a href="https://pmactavish13.github.io/bigLsCrew-Travel/">
+                    <img src="assets/images/practicalTravel.jpg" class="auth-image" alt="Practical Travel">
+                    <h3>Practical Travel</h3>
+                </a>
+            </div>
+
+            <div class="work">
+                <a href="https://pmactavish13.github.io/Train-Scheduler/">
+                    <img src="assets/images/train.jpg" class="auth-image" alt="Train Scheduler">
+                    <h3>Train Scheduler</h3>
+                </a>
+            </div>
+
+            <div class="work">
+                <a href="https://pmactavish13.github.io/Giphy-API/">
+                    <img src="assets/images/giphyFun.jpeg" class="auth-image" alt="Giphy Fun">
+                    <h3>Giphy Fun</h3>
+                </a>
+            </div>
+
+            <div class="work">
+                <a href="https://pmactavish13.github.io/TriviaGame/">
+                    <img src="assets/images/triviaBackground.jpg" class="auth-image" alt="Trivia Game">
+                    <h3>Trivia Game</h3>
+                </a>
+            </div>
+
+            <div class="work">
+                <a href="https://pmactavish13.github.io/week-4-game">
+                    <img src="assets/images/crystals-4.jpeg" class="auth-image" alt="Crystals Game">
+                    <h3>Crystals Game</h3>
+                </a>
+            </div>
+
+            <div class="work">
+                <a href="https://pmactavish13.github.io/week-4-game/">
+                    <img src="assets/images/spiderweb.jpg" class="auth-image" alt="Hangman">
+                    <h3>Hangman</h3>
                 </a>
             </div>
 
