--- a/portfolio.html
+++ b/portfolio.html
@@ -38,6 +38,13 @@
 
             <!-- main content body-->
             <div class="work">
+                <a href="https://lit-plateau-28542.herokuapp.com/">
+                    <img src="assets/images/burger.png" class="auth-image" alt="burger">
+                    <h3>Eat-Da-Burger</h3>
+                </a>
+            </div>
+
+            <div class="work">
                 <a href="https://secure-fortress-56113.herokuapp.com/">
                     <img src="assets/images/Friend-Finder.jpg" class="auth-image" alt="Friend-Finder">
                     <h3>Friend Finder</h3>
