--- a/portfolio.html
+++ b/portfolio.html
@@ -38,8 +38,15 @@
 
             <!-- main content body-->
             <div class="work">
+                <a href="https://ancient-lake-67242.herokuapp.com/">
+                    <img src="assets/images/sequelizedBurger.jpg" class="auth-image" alt="Sequeize Burger">
+                    <h3>Sequelize Burger</h3>
+                </a>
+            </div>
+
+            <div class="work">
                 <a href="https://lit-plateau-28542.herokuapp.com/">
-                    <img src="assets/images/burger.png" class="auth-image" alt="burger">
+                    <img src="assets/images/burger.png" class="auth-image" alt="Burger">
                     <h3>Eat-Da-Burger</h3>
                 </a>
             </div>
